flowc/tests/fixtures/check_e124_suggestion.flow
flow f(int) -> int {
  total = it + 1
  totl
}
